@@ -1,6 +1,6 @@
 # Fsck.py -- Check backend file system for each target
 # Copyright (C) 2010 BULL S.A.S, CEA
-# Copyright (C) 2012 CEA
+# Copyright (C) 2012-2013 CEA
 #
 # This file is part of shine
 #
@@ -18,7 +18,6 @@
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 #
-# $Id$
 
 import sys
 
@@ -115,9 +114,6 @@ class Fsck(FSTargetLiveCriticalCommand):
         if hasattr(eh, 'pre'):
             eh.pre(fs)
         
-        # Notify backend of file system status mofication
-        fs_conf.set_status_fs_checking()
-
         # Fsck really.
         status = fs.fsck(addopts=self.options.additional,
                          failover=self.options.failover,
@@ -126,15 +122,9 @@ class Fsck(FSTargetLiveCriticalCommand):
         rc = self.fs_status_to_rc(status)
 
         if rc == RC_OK:
-            # Notify backend of file system status mofication
-            fs_conf.set_status_fs_offline()
-
             if vlevel > 0:
                 print "Fsck successful."
         else:
-            # Notify backend of file system status mofication
-            fs_conf.set_status_fs_critical()
-
             if rc == RC_RUNTIME_ERROR:
                 for nodes, msg in fs.proxy_errors:
                     print "%s: %s" % (nodes, msg)
